--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="zh-CN">
 <head>
 <meta charset="UTF-8">
-<title>Happy 的个人主页</title>
+<title>Happy 的个人主页 + 圣诞树</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <style>
 body, html {
@@ -11,7 +11,6 @@ body, html {
   color:#333;
   overflow-x:hidden;
   transition: color 0.5s;
-  background:#111;
 }
 body.dark { color:#eee; }
 
@@ -33,12 +32,12 @@ body.dark #bgVideo { filter: brightness(40%) contrast(110%); }
   z-index:0;
 }
 
-/* 3D 树容器 */
+/* 3D树容器 */
 #tree3DContainer {
   position:fixed; top:0; left:0;
   width:100%; height:100%;
   pointer-events:none;
-  z-index:0;
+  z-index:1;
 }
 
 /* 苹果风格卡片 */
@@ -47,42 +46,42 @@ body.dark #bgVideo { filter: brightness(40%) contrast(110%); }
   backdrop-filter: blur(20px);
   border-radius: 25px;
   box-shadow: 0 8px 30px rgba(0,0,0,0.1);
-  padding:20px 15px;
+  padding:25px 20px;
   display:flex;
   flex-direction:column;
-  gap:10px;
+  gap:12px;
   transition: transform 0.3s ease, box-shadow 0.3s ease, background 0.5s;
-  width:300px;
-  margin:0 auto 30px;
+  width:320px;
+  margin:0 auto 40px;
 }
 .card:hover { transform: translateY(-5px); box-shadow: 0 12px 35px rgba(0,0,0,0.15);}
 body.dark .card { background: rgba(40,40,40,0.7); color:#eee; }
 
-.card .tags { margin-top:8px; text-align:center; }
+.card .tags { margin-top:10px; text-align:center; }
 .card .tag {
   display:inline-block;
   background:linear-gradient(45deg,#5ac8fa,#007aff);
   color:white;
-  padding:4px 8px;
-  margin:2px;
-  border-radius:12px;
+  padding:5px 10px;
+  margin:3px;
+  border-radius:15px;
   font-size:12px;
   transition:0.2s;
 }
 .card .tag:hover { transform:scale(1.1); }
 
 /* 头部 */
-header { text-align:center; padding:50px 20px 20px; position:relative; z-index:1;}
-header img { width:120px; height:120px; border-radius:50%; border:4px solid rgba(255,255,255,0.8); margin-bottom:15px; transition:transform 0.3s;}
+header { text-align:center; padding:60px 20px 20px; position:relative; z-index:2;}
+header img { width:140px; height:140px; border-radius:50%; border:4px solid rgba(255,255,255,0.8); margin-bottom:20px; transition:transform 0.3s;}
 header img:hover {transform:scale(1.1);}
 header h1, header p { color: inherit; margin:0;}
-header h1{margin:10px 0; font-size:32px;}
-header p{font-size:16px; margin:5px 0;}
+header h1{margin:10px 0; font-size:36px;}
+header p{font-size:18px; margin:5px 0;}
 
 /* 导航 */
-nav { margin-top:15px; background:rgba(255,255,255,0.2); padding:8px 0; position:sticky; top:0; z-index:5; border-radius:20px; transition:0.3s;}
+nav { margin-top:20px; background:rgba(255,255,255,0.2); padding:10px 0; position:sticky; top:0; z-index:5; border-radius:20px; transition:0.3s;}
 nav.scrolled { background:rgba(0,0,0,0.5); box-shadow:0 4px 10px rgba(0,0,0,0.3);}
-nav a { margin:0 12px; text-decoration:none; font-weight:bold; transition:0.3s;}
+nav a { margin:0 15px; text-decoration:none; font-weight:bold; transition:0.3s;}
 nav a.active { color:#ffeb3b;}
 nav a:hover { color:#ffeb3b; }
 
@@ -105,27 +104,36 @@ nav a:hover { color:#ffeb3b; }
 #qrModal.show { display:flex; }
 
 /* 分区 */
-section { padding:60px 20px; text-align:center; position:relative; z-index:1; }
+section { padding:60px 20px; text-align:center; position:relative; z-index:2; }
 section h2 { font-size:28px; color:#007aff; margin-bottom:30px; }
 
-/* 日记小巧输入框居中 */
+/* 日记 */
+#diary .card { max-width:280px; margin:0 auto 20px; }
 textarea, input[type="date"] {
-  width:80%; padding:8px; border-radius:15px; border:none; box-shadow: inset 0 2px 5px rgba(0,0,0,0.1);
-  resize:none; margin:0 auto; display:block; text-align:left; font-size:14px;
+  width:90%; padding:8px; border-radius:15px; border:none; box-shadow: inset 0 2px 5px rgba(0,0,0,0.1);
+  resize:none; margin:0 auto; display:block; text-align:left;
 }
-.diary-actions { display:flex; justify-content:center; gap:10px; margin-top:8px; }
-.diary-actions button, #addDiaryBtn {
-  padding:6px 10px; cursor:pointer; border:none; border-radius:20px;
-  background:linear-gradient(135deg,#5ac8fa,#007aff); color:white; font-weight:bold; font-size:14px; transition:0.3s;
+.diary-actions { display:flex; justify-content:center; gap:10px; margin-top:10px; }
+.diary-actions button {
+  padding:6px 12px;
+  font-size:14px;
+  border-radius:20px;
+  cursor:pointer;
+  border:none;
+  background:linear-gradient(135deg,#5ac8fa,#007aff);
+  color:white;
+  transition:0.3s;
 }
-.diary-actions button:hover, #addDiaryBtn:hover { background:linear-gradient(135deg,#007aff,#5ac8fa); }
+#addDiaryBtn {
+  padding:10px 16px;
+  font-size:16px;
+}
 
 /* 响应式 */
 @media(max-width:600px){
   header img{width:100px;height:100px;}
   .card{width:90%;}
   nav a{margin:0 8px; font-size:14px;}
-  textarea, input[type="date"]{width:90%; font-size:13px;}
 }
 </style>
 </head>
@@ -187,68 +195,14 @@ textarea, input[type="date"] {
 <footer>&copy; 2025 Happyma.top</footer>
 <div id="qrModal"><img src="https://github.com/Happyma-4869/Happyma-4869.github.io/blob/main/%E5%BE%AE%E4%BF%A1%E5%9B%BE%E7%89%87_20251207233522_10_79.jpg?raw=true" alt="微信二维码大图"></div>
 
+<!-- ------------------- JS ------------------- -->
 <script src="https://cdn.jsdelivr.net/npm/three@0.158.0/build/three.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/three@0.158.0/examples/js/controls/OrbitControls.js"></script>
-
 <script>
-// ---------------- 日记 ----------------
-const diaryList=document.getElementById('diaryList');
-const addDiaryBtn=document.getElementById('addDiaryBtn');
-const diaryDate=document.getElementById('diaryDate');
-const diaryContent=document.getElementById('diaryContent');
-let diaries=JSON.parse(localStorage.getItem('diaries'))||[{date:'2025-12-08', content:'今天是我初次创建我的个人网站，目前还在测试中，以后我会逐步完善✌'}];
-function renderDiaries(){
-  diaryList.innerHTML='';
-  diaries.forEach((d,i)=>{
-    const card=document.createElement('div');
-    card.className='card show';
-    card.innerHTML=`<p><strong>${d.date}</strong></p>
-                    <p>${d.content}</p>
-                    <div class="diary-actions">
-                      <button onclick="editDiary(${i})">编辑</button>
-                      <button onclick="deleteDiary(${i})">删除</button>
-                    </div>`;
-    diaryList.appendChild(card);
-  });
-  localStorage.setItem('diaries', JSON.stringify(diaries));
-}
-renderDiaries();
-addDiaryBtn.addEventListener('click',()=>{
-  const dateVal=diaryDate.value||new Date().toISOString().split('T')[0];
-  const contentVal=diaryContent.value.trim();
-  if(!contentVal){ alert('请填写内容'); return; }
-  diaries.unshift({date:dateVal, content:contentVal});
-  diaryDate.value=''; diaryContent.value='';
-  renderDiaries();
-});
-function deleteDiary(i){ diaries.splice(i,1); renderDiaries(); }
-function editDiary(i){
-  const newContent=prompt('请输入新的日记内容：', diaries[i].content);
-  if(newContent===null) return;
-  diaries[i].content=newContent;
-  renderDiaries();
-}
-
-// ---------------- 日夜模式 ----------------
-const modeToggle=document.getElementById('modeToggle');
-modeToggle.addEventListener('click',()=>{
-    document.body.classList.toggle('dark');
-    particlesArray.forEach(p=>{
-        p.color=document.body.classList.contains('dark')?'rgba(255,255,255,0.9)':'rgba(255,255,255,0.3)';
-    });
-    initParticles();
-});
-
-// ---------------- 返回顶部 ----------------
-const toTopBtn=document.getElementById('toTopBtn');
-window.addEventListener('scroll',()=>{ toTopBtn.style.display=(window.scrollY>200)?'block':'none'; });
-toTopBtn.addEventListener('click',()=>{ window.scrollTo({top:0, behavior:'smooth'}); });
-
-// ---------------- 粒子动画 ----------------
+// ---------- 粒子动画 ----------
 const canvas=document.getElementById('particles');
 const ctx=canvas.getContext('2d');
-let particlesArray=[];
-let mouse={x:null,y:null};
+let particlesArray=[], mouse={x:null,y:null};
 window.addEventListener('mousemove', e=>{ mouse.x=e.x; mouse.y=e.y; });
 function resizeCanvas(){ canvas.width=window.innerWidth; canvas.height=window.innerHeight; }
 window.addEventListener('resize', resizeCanvas);
@@ -289,20 +243,69 @@ function initParticles(){
   for(let i=0;i<count;i++){ particlesArray.push(new Particle()); }
 }
 initParticles();
-function animateParticles(){
-  ctx.clearRect(0,0,canvas.width,canvas.height);
-  particlesArray.forEach(p=>{p.update();p.draw();});
-  requestAnimationFrame(animateParticles);
-}
+function animateParticles(){ ctx.clearRect(0,0,canvas.width,canvas.height); particlesArray.forEach(p=>{p.update();p.draw();}); requestAnimationFrame(animateParticles); }
 animateParticles();
 
-// ---------------- 微信二维码弹窗 ----------------
+// ---------- 日记功能 ----------
+const diaryList=document.getElementById('diaryList');
+const addDiaryBtn=document.getElementById('addDiaryBtn');
+const diaryDate=document.getElementById('diaryDate');
+const diaryContent=document.getElementById('diaryContent');
+let diaries=JSON.parse(localStorage.getItem('diaries'))||[{date:'2025-12-08', content:'今天是我初次创建我的个人网站  目前还在测试中  以后我会逐步完善耶✌'}];
+function renderDiaries(){
+  diaryList.innerHTML='';
+  diaries.forEach((d,i)=>{
+    const card=document.createElement('div');
+    card.className='card show';
+    card.innerHTML=`<p><strong>${d.date}</strong></p>
+                    <p>${d.content}</p>
+                    <div class="diary-actions">
+                      <button onclick="editDiary(${i})">编辑</button>
+                      <button onclick="deleteDiary(${i})">删除</button>
+                    </div>`;
+    diaryList.appendChild(card);
+  });
+  localStorage.setItem('diaries', JSON.stringify(diaries));
+}
+renderDiaries();
+addDiaryBtn.addEventListener('click',()=>{
+  const dateVal=diaryDate.value||new Date().toISOString().split('T')[0];
+  const contentVal=diaryContent.value.trim();
+  if(!contentVal){ alert('请填写内容'); return; }
+  diaries.unshift({date:dateVal, content:contentVal});
+  diaryDate.value=''; diaryContent.value='';
+  renderDiaries();
+});
+function deleteDiary(i){ diaries.splice(i,1); renderDiaries(); }
+function editDiary(i){
+  const newContent=prompt('请输入新的日记内容：', diaries[i].content);
+  if(newContent===null) return;
+  diaries[i].content=newContent;
+  renderDiaries();
+}
+
+// ---------- 日夜模式 ----------
+const modeToggle=document.getElementById('modeToggle');
+modeToggle.addEventListener('click',()=>{
+    document.body.classList.toggle('dark');
+    particlesArray.forEach(p=>{
+        p.color=document.body.classList.contains('dark')?'rgba(255,255,255,0.9)':'rgba(255,255,255,0.3)';
+    });
+    initParticles();
+});
+
+// ---------- 返回顶部 ----------
+const toTopBtn=document.getElementById('toTopBtn');
+window.addEventListener('scroll',()=>{ toTopBtn.style.display=(window.scrollY>200)?'block':'none'; });
+toTopBtn.addEventListener('click',()=>{ window.scrollTo({top:0, behavior:'smooth'}); });
+
+// ---------- 微信二维码弹窗 ----------
 const qrImg=document.getElementById('qrImg');
 const qrModal=document.getElementById('qrModal');
 qrImg.addEventListener('click',()=>qrModal.classList.add('show'));
 qrModal.addEventListener('click',()=>qrModal.classList.remove('show'));
 
-// ---------------- 卡片滚动动画 ----------------
+// ---------- 卡片滚动动画 ----------
 function showOnScroll() {
     const cards = document.querySelectorAll('.card');
     cards.forEach(card => {
@@ -313,7 +316,7 @@ function showOnScroll() {
 window.addEventListener('scroll', showOnScroll);
 window.addEventListener('load', showOnScroll);
 
-// ---------------- 导航高亮 ----------------
+// ---------- 导航高亮 ----------
 const mainNav = document.getElementById('mainNav');
 const navLinks = mainNav.querySelectorAll('a');
 window.addEventListener('scroll', () => {
@@ -325,112 +328,108 @@ window.addEventListener('scroll', () => {
     });
 });
 
-// ---------------- 3D 圣诞树 ----------------
-let scene, camera, renderer, controls, treeGroup;
-let sphereMesh, cubeMesh, starMesh;
+// ---------- 3D 圣诞树 ----------
+let scene, camera, renderer, controls, treeGroup, sphereMesh, cubeMesh, starMesh;
 let treeInstancedCount = 500;
 let clock = new THREE.Clock();
-let dummy = new THREE.Object3D();
+let isDragging=false, dragStart=null, animationState="tree";
 
 init3DTree();
 animate3DTree();
 
 function init3DTree(){
-    const container = document.getElementById('tree3DContainer');
-    scene = new THREE.Scene();
-    camera = new THREE.PerspectiveCamera(50, container.clientWidth/container.clientHeight, 0.1, 2000);
-    camera.position.set(0,50,100);
-    renderer = new THREE.WebGLRenderer({antialias:true, alpha:true});
-    renderer.setSize(container.clientWidth, container.clientHeight);
-    container.appendChild(renderer.domElement);
-    controls = new THREE.OrbitControls(camera, renderer.domElement);
-    controls.enableDamping = true;
+  const container = document.getElementById('tree3DContainer');
+  scene = new THREE.Scene();
+  camera = new THREE.PerspectiveCamera(50, window.innerWidth/window.innerHeight, 0.1, 2000);
+  camera.position.set(0,50,100);
+  renderer = new THREE.WebGLRenderer({antialias:true, alpha:true});
+  renderer.setSize(window.innerWidth, window.innerHeight);
+  container.appendChild(renderer.domElement);
 
-    const ambient = new THREE.AmbientLight(0xffffff, 0.5); scene.add(ambient);
-    const directional = new THREE.DirectionalLight(0xffffff, 1); directional.position.set(50,100,50); scene.add(directional);
+  controls = new THREE.OrbitControls(camera, renderer.domElement);
+  controls.enableDamping = true;
 
-    treeGroup = new THREE.Group(); scene.add(treeGroup);
+  const ambient = new THREE.AmbientLight(0xffffff,0.4);
+  scene.add(ambient);
+  const directional = new THREE.DirectionalLight(0xffffff,1);
+  directional.position.set(50,100,50);
+  scene.add(directional);
 
-    const sphereMaterialGold = new THREE.MeshStandardMaterial({color:0xFFD700, metalness:0.8, roughness:0.2});
-    const cubeMaterialGreen = new THREE.MeshStandardMaterial({color:0x006400, metalness:0.6, roughness:0.4});
-    const sphereGeo = new THREE.SphereGeometry(1.5,16,16);
-    const cubeGeo = new THREE.BoxGeometry(2,2,2);
+  treeGroup = new THREE.Group();
+  scene.add(treeGroup);
 
-    sphereMesh = new THREE.InstancedMesh(sphereGeo, sphereMaterialGold, treeInstancedCount);
-    cubeMesh = new THREE.InstancedMesh(cubeGeo, cubeMaterialGreen, treeInstancedCount);
-    treeGroup.add(sphereMesh); treeGroup.add(cubeMesh);
+  const sphereMaterialGold = new THREE.MeshStandardMaterial({color:0xFFD700, metalness:0.8, roughness:0.2});
+  const cubeMaterialGreen = new THREE.MeshStandardMaterial({color:0x006400, metalness:0.6, roughness:0.4});
 
-    for(let i=0;i<treeInstancedCount;i++){
-        const layer = Math.floor(Math.random()*15);
-        const radius = 2 + layer*1.5 + Math.random()*1;
-        const angle = Math.random()*Math.PI*2;
-        dummy.position.set(radius*Math.cos(angle), layer*1.5, radius*Math.sin(angle));
-        dummy.rotation.set(Math.random()*Math.PI, Math.random()*Math.PI, Math.random()*Math.PI);
-        dummy.updateMatrix();
-        if(i%2===0){ sphereMesh.setMatrixAt(i,dummy.matrix); if(Math.random()>0.5) sphereMesh.setColorAt(i,new THREE.Color(0xFF0000)); }
-        else{ cubeMesh.setMatrixAt(i,dummy.matrix); if(Math.random()>0.5) cubeMesh.setColorAt(i,new THREE.Color(0xFFD700)); }
-    }
-    sphereMesh.instanceMatrix.needsUpdate = true; cubeMesh.instanceMatrix.needsUpdate = true;
+  const sphereGeo = new THREE.SphereGeometry(1.5,16,16);
+  const cubeGeo = new THREE.BoxGeometry(2,2,2);
 
-    const starGeo = new THREE.OctahedronGeometry(3);
-    const starMat = new THREE.MeshStandardMaterial({color:0xFFFF00, metalness:1, roughness:0.2});
-    starMesh = new THREE.Mesh(starGeo, starMat);
-    starMesh.position.set(0,25,0);
-    treeGroup.add(starMesh);
+  sphereMesh = new THREE.InstancedMesh(sphereGeo, sphereMaterialGold, treeInstancedCount);
+  cubeMesh = new THREE.InstancedMesh(cubeGeo, cubeMaterialGreen, treeInstancedCount);
 
-    // 树粒子
-    addTreeParticles();
+  treeGroup.add(sphereMesh);
+  treeGroup.add(cubeMesh);
 
-    window.addEventListener('resize', ()=>{
-        camera.aspect = container.clientWidth/container.clientHeight;
-        camera.updateProjectionMatrix();
-        renderer.setSize(container.clientWidth, container.clientHeight);
-    });
+  const dummy = new THREE.Object3D();
+  for(let i=0;i<treeInstancedCount;i++){
+    const layer = Math.floor(Math.random()*15);
+    const radius = 2+layer*1.5+Math.random()*1;
+    const angle = Math.random()*Math.PI*2;
+    dummy.position.set(radius*Math.cos(angle), layer*1.5, radius*Math.sin(angle));
+    dummy.rotation.set(Math.random()*Math.PI, Math.random()*Math.PI, Math.random()*Math.PI);
+    dummy.updateMatrix();
+    if(i%2===0){ sphereMesh.setMatrixAt(i,dummy.matrix); }
+    else{ cubeMesh.setMatrixAt(i,dummy.matrix); }
+  }
+  sphereMesh.instanceMatrix.needsUpdate = true;
+  cubeMesh.instanceMatrix.needsUpdate = true;
 
-    window.addEventListener('mousemove', onMouseMove);
-    window.addEventListener('scroll', onScrollMove);
+  // 星星
+  const starGeo = new THREE.OctahedronGeometry(3);
+  const starMat = new THREE.MeshStandardMaterial({color:0xFFFF00, metalness:1, roughness:0.2});
+  starMesh = new THREE.Mesh(starGeo, starMat);
+  starMesh.position.set(0,25,0);
+  treeGroup.add(starMesh);
+
+  renderer.domElement.addEventListener('pointerdown', onPointerDown);
+  renderer.domElement.addEventListener('pointerup', onPointerUp);
+  window.addEventListener('resize', onWindowResize);
 }
 
-let mouse3D = new THREE.Vector2();
-function onMouseMove(event){
-    mouse3D.x = (event.clientX / window.innerWidth) * 2 - 1;
-    mouse3D.y = -(event.clientY / window.innerHeight) * 2 + 1;
+function onWindowResize(){
+  camera.aspect = window.innerWidth/window.innerHeight;
+  camera.updateProjectionMatrix();
+  renderer.setSize(window.innerWidth, window.innerHeight);
 }
 
-// 树周围轻微飘落光点
-let treeParticles = [];
-function addTreeParticles(){
-    const particleGeo = new THREE.SphereGeometry(0.3,8,8);
-    const particleMat = new THREE.MeshStandardMaterial({color:0xFFFFFF, emissive:0xFFFFFF});
-    for(let i=0;i<50;i++){
-        let p = new THREE.Mesh(particleGeo, particleMat.clone());
-        p.position.set((Math.random()-0.5)*20, Math.random()*25, (Math.random()-0.5)*20);
-        p.userData.speed = 0.02 + Math.random()*0.02;
-        scene.add(p); treeParticles.push(p);
-    }
+function onPointerDown(event){
+  isDragging=false;
+  dragStart={x:event.clientX, y:event.clientY};
+}
+
+function onPointerUp(event){
+  const dx = event.clientX-dragStart.x;
+  const dy = event.clientY-dragStart.y;
+  if(Math.abs(dx)<5 && Math.abs(dy)<5){
+    flashTree();
+  }
+}
+
+function flashTree(){
+  treeGroup.children.forEach(c=>{
+    if(c.material) c.material.emissive=new THREE.Color(0xFFFFFF);
+  });
+  setTimeout(()=>{ treeGroup.children.forEach(c=>{ if(c.material) c.material.emissive=new THREE.Color(0x000000); }); },200);
 }
 
 function animate3DTree(){
-    requestAnimationFrame(animate3DTree);
-    const delta = clock.getDelta();
-
-    treeGroup.rotation.y += delta*0.2;
-
-    // 树粒子上下飘动
-    treeParticles.forEach(p=>{
-        p.position.y -= p.userData.speed;
-        if(p.position.y <0) p.position.y = 25;
-    });
-
-    controls.update();
-    renderer.render(scene, camera);
-}
-
-// 页面滚动时微动
-function onScrollMove(){
-    let scrollY = window.scrollY / window.innerHeight;
-    treeGroup.position.y = scrollY * 5; // 向下滚动，树轻微上移
+  requestAnimationFrame(animate3DTree);
+  const delta = clock.getDelta();
+  treeGroup.rotation.y += delta*0.2;
+  controls.update();
+  renderer.render(scene,camera);
 }
 </script>
+
 </body>
 </html>
